; ModuleID = '/home/carl/AnghaBench/openssl/fuzz/extr_asn1.c_FuzzerTestOneInput.c'
source_filename = "/home/carl/AnghaBench/openssl/fuzz/extr_asn1.c_FuzzerTestOneInput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@item_type = common dso_local global i32** null, align 8
@pctx = common dso_local global i32 0, align 4
@TS_REQ = common dso_local global i32 0, align 4
@d2i_TS_REQ = common dso_local global i32 0, align 4
@i2d_TS_REQ = common dso_local global i32 0, align 4
@TS_REQ_print_bio = common dso_local global i32 0, align 4
@TS_MSG_IMPRINT = common dso_local global i32 0, align 4
@d2i_TS_MSG_IMPRINT = common dso_local global i32 0, align 4
@i2d_TS_MSG_IMPRINT = common dso_local global i32 0, align 4
@TS_MSG_IMPRINT_print_bio = common dso_local global i32 0, align 4
@TS_RESP = common dso_local global i32 0, align 4
@d2i_TS_RESP = common dso_local global i32 0, align 4
@i2d_TS_RESP = common dso_local global i32 0, align 4
@TS_RESP_print_bio = common dso_local global i32 0, align 4
@TS_STATUS_INFO = common dso_local global i32 0, align 4
@d2i_TS_STATUS_INFO = common dso_local global i32 0, align 4
@i2d_TS_STATUS_INFO = common dso_local global i32 0, align 4
@TS_STATUS_INFO_print_bio = common dso_local global i32 0, align 4
@TS_TST_INFO = common dso_local global i32 0, align 4
@d2i_TS_TST_INFO = common dso_local global i32 0, align 4
@i2d_TS_TST_INFO = common dso_local global i32 0, align 4
@TS_TST_INFO_print_bio = common dso_local global i32 0, align 4
@TS_ACCURACY = common dso_local global i32 0, align 4
@d2i_TS_ACCURACY = common dso_local global i32 0, align 4
@i2d_TS_ACCURACY = common dso_local global i32 0, align 4
@ESS_ISSUER_SERIAL = common dso_local global i32 0, align 4
@d2i_ESS_ISSUER_SERIAL = common dso_local global i32 0, align 4
@i2d_ESS_ISSUER_SERIAL = common dso_local global i32 0, align 4
@ESS_CERT_ID = common dso_local global i32 0, align 4
@d2i_ESS_CERT_ID = common dso_local global i32 0, align 4
@i2d_ESS_CERT_ID = common dso_local global i32 0, align 4
@ESS_SIGNING_CERT = common dso_local global i32 0, align 4
@d2i_ESS_SIGNING_CERT = common dso_local global i32 0, align 4
@i2d_ESS_SIGNING_CERT = common dso_local global i32 0, align 4
@ESS_CERT_ID_V2 = common dso_local global i32 0, align 4
@d2i_ESS_CERT_ID_V2 = common dso_local global i32 0, align 4
@i2d_ESS_CERT_ID_V2 = common dso_local global i32 0, align 4
@ESS_SIGNING_CERT_V2 = common dso_local global i32 0, align 4
@d2i_ESS_SIGNING_CERT_V2 = common dso_local global i32 0, align 4
@i2d_ESS_SIGNING_CERT_V2 = common dso_local global i32 0, align 4
@DH = common dso_local global i32 0, align 4
@d2i_DHparams = common dso_local global i32 0, align 4
@i2d_DHparams = common dso_local global i32 0, align 4
@DHparams_print = common dso_local global i32 0, align 4
@d2i_DHxparams = common dso_local global i32 0, align 4
@i2d_DHxparams = common dso_local global i32 0, align 4
@DSA_SIG = common dso_local global i32 0, align 4
@d2i_DSA_SIG = common dso_local global i32 0, align 4
@i2d_DSA_SIG = common dso_local global i32 0, align 4
@DSA = common dso_local global i32 0, align 4
@d2i_DSAPrivateKey = common dso_local global i32 0, align 4
@i2d_DSAPrivateKey = common dso_local global i32 0, align 4
@DSA_print = common dso_local global i32 0, align 4
@d2i_DSAPublicKey = common dso_local global i32 0, align 4
@i2d_DSAPublicKey = common dso_local global i32 0, align 4
@d2i_DSAparams = common dso_local global i32 0, align 4
@i2d_DSAparams = common dso_local global i32 0, align 4
@DSAparams_print = common dso_local global i32 0, align 4
@RSA = common dso_local global i32 0, align 4
@d2i_RSAPublicKey = common dso_local global i32 0, align 4
@i2d_RSAPublicKey = common dso_local global i32 0, align 4
@RSA_print = common dso_local global i32 0, align 4
@EC_GROUP = common dso_local global i32 0, align 4
@d2i_ECPKParameters = common dso_local global i32 0, align 4
@i2d_ECPKParameters = common dso_local global i32 0, align 4
@ECPKParameters_print = common dso_local global i32 0, align 4
@EC_KEY = common dso_local global i32 0, align 4
@d2i_ECPrivateKey = common dso_local global i32 0, align 4
@i2d_ECPrivateKey = common dso_local global i32 0, align 4
@EC_KEY_print = common dso_local global i32 0, align 4
@d2i_ECParameters = common dso_local global i32 0, align 4
@i2d_ECParameters = common dso_local global i32 0, align 4
@ECParameters_print = common dso_local global i32 0, align 4
@ECDSA_SIG = common dso_local global i32 0, align 4
@d2i_ECDSA_SIG = common dso_local global i32 0, align 4
@i2d_ECDSA_SIG = common dso_local global i32 0, align 4
@EVP_PKEY = common dso_local global i32 0, align 4
@d2i_AutoPrivateKey = common dso_local global i32 0, align 4
@i2d_PrivateKey = common dso_local global i32 0, align 4
@EVP_PKEY_print_private = common dso_local global i32 0, align 4
@SSL_SESSION = common dso_local global i32 0, align 4
@d2i_SSL_SESSION = common dso_local global i32 0, align 4
@i2d_SSL_SESSION = common dso_local global i32 0, align 4
@SSL_SESSION_print = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FuzzerTestOneInput(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 0, i32* %5, align 4
  br label %11

11:                                               ; preds = %50, %2
  %12 = load i32**, i32*** @item_type, align 8
  %13 = load i32, i32* %5, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32*, i32** %12, i64 %14
  %16 = load i32*, i32** %15, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %53

18:                                               ; preds = %11
  %19 = load i32*, i32** %3, align 8
  store i32* %19, i32** %6, align 8
  store i8* null, i8** %7, align 8
  %20 = load i32**, i32*** @item_type, align 8
  %21 = load i32, i32* %5, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32*, i32** %20, i64 %22
  %24 = load i32*, i32** %23, align 8
  %25 = call i32* @ASN1_ITEM_ptr(i32* %24)
  store i32* %25, i32** %8, align 8
  %26 = load i64, i64* %4, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = call i32* @ASN1_item_d2i(i32* null, i32** %6, i64 %26, i32* %27)
  store i32* %28, i32** %9, align 8
  %29 = load i32*, i32** %9, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %49

31:                                               ; preds = %18
  %32 = call i32 (...) @BIO_s_null()
  %33 = call i32* @BIO_new(i32 %32)
  store i32* %33, i32** %10, align 8
  %34 = load i32*, i32** %10, align 8
  %35 = load i32*, i32** %9, align 8
  %36 = load i32*, i32** %8, align 8
  %37 = load i32, i32* @pctx, align 4
  %38 = call i32 @ASN1_item_print(i32* %34, i32* %35, i32 4, i32* %36, i32 %37)
  %39 = load i32*, i32** %10, align 8
  %40 = call i32 @BIO_free(i32* %39)
  %41 = load i32*, i32** %9, align 8
  %42 = load i32*, i32** %8, align 8
  %43 = call i32 @ASN1_item_i2d(i32* %41, i8** %7, i32* %42)
  %44 = load i8*, i8** %7, align 8
  %45 = call i32 @OPENSSL_free(i8* %44)
  %46 = load i32*, i32** %9, align 8
  %47 = load i32*, i32** %8, align 8
  %48 = call i32 @ASN1_item_free(i32* %46, i32* %47)
  br label %49

49:                                               ; preds = %31, %18
  br label %50

50:                                               ; preds = %49
  %51 = load i32, i32* %5, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %5, align 4
  br label %11

53:                                               ; preds = %11
  %54 = load i32, i32* @TS_REQ, align 4
  %55 = load i32, i32* @d2i_TS_REQ, align 4
  %56 = load i32, i32* @i2d_TS_REQ, align 4
  %57 = load i32, i32* @TS_REQ_print_bio, align 4
  %58 = call i32 @DO_TEST(i32 %54, i32 %55, i32 %56, i32 %57)
  %59 = load i32, i32* @TS_MSG_IMPRINT, align 4
  %60 = load i32, i32* @d2i_TS_MSG_IMPRINT, align 4
  %61 = load i32, i32* @i2d_TS_MSG_IMPRINT, align 4
  %62 = load i32, i32* @TS_MSG_IMPRINT_print_bio, align 4
  %63 = call i32 @DO_TEST(i32 %59, i32 %60, i32 %61, i32 %62)
  %64 = load i32, i32* @TS_RESP, align 4
  %65 = load i32, i32* @d2i_TS_RESP, align 4
  %66 = load i32, i32* @i2d_TS_RESP, align 4
  %67 = load i32, i32* @TS_RESP_print_bio, align 4
  %68 = call i32 @DO_TEST(i32 %64, i32 %65, i32 %66, i32 %67)
  %69 = load i32, i32* @TS_STATUS_INFO, align 4
  %70 = load i32, i32* @d2i_TS_STATUS_INFO, align 4
  %71 = load i32, i32* @i2d_TS_STATUS_INFO, align 4
  %72 = load i32, i32* @TS_STATUS_INFO_print_bio, align 4
  %73 = call i32 @DO_TEST(i32 %69, i32 %70, i32 %71, i32 %72)
  %74 = load i32, i32* @TS_TST_INFO, align 4
  %75 = load i32, i32* @d2i_TS_TST_INFO, align 4
  %76 = load i32, i32* @i2d_TS_TST_INFO, align 4
  %77 = load i32, i32* @TS_TST_INFO_print_bio, align 4
  %78 = call i32 @DO_TEST(i32 %74, i32 %75, i32 %76, i32 %77)
  %79 = load i32, i32* @TS_ACCURACY, align 4
  %80 = load i32, i32* @d2i_TS_ACCURACY, align 4
  %81 = load i32, i32* @i2d_TS_ACCURACY, align 4
  %82 = call i32 @DO_TEST_NO_PRINT(i32 %79, i32 %80, i32 %81)
  %83 = load i32, i32* @ESS_ISSUER_SERIAL, align 4
  %84 = load i32, i32* @d2i_ESS_ISSUER_SERIAL, align 4
  %85 = load i32, i32* @i2d_ESS_ISSUER_SERIAL, align 4
  %86 = call i32 @DO_TEST_NO_PRINT(i32 %83, i32 %84, i32 %85)
  %87 = load i32, i32* @ESS_CERT_ID, align 4
  %88 = load i32, i32* @d2i_ESS_CERT_ID, align 4
  %89 = load i32, i32* @i2d_ESS_CERT_ID, align 4
  %90 = call i32 @DO_TEST_NO_PRINT(i32 %87, i32 %88, i32 %89)
  %91 = load i32, i32* @ESS_SIGNING_CERT, align 4
  %92 = load i32, i32* @d2i_ESS_SIGNING_CERT, align 4
  %93 = load i32, i32* @i2d_ESS_SIGNING_CERT, align 4
  %94 = call i32 @DO_TEST_NO_PRINT(i32 %91, i32 %92, i32 %93)
  %95 = load i32, i32* @ESS_CERT_ID_V2, align 4
  %96 = load i32, i32* @d2i_ESS_CERT_ID_V2, align 4
  %97 = load i32, i32* @i2d_ESS_CERT_ID_V2, align 4
  %98 = call i32 @DO_TEST_NO_PRINT(i32 %95, i32 %96, i32 %97)
  %99 = load i32, i32* @ESS_SIGNING_CERT_V2, align 4
  %100 = load i32, i32* @d2i_ESS_SIGNING_CERT_V2, align 4
  %101 = load i32, i32* @i2d_ESS_SIGNING_CERT_V2, align 4
  %102 = call i32 @DO_TEST_NO_PRINT(i32 %99, i32 %100, i32 %101)
  %103 = load i32, i32* @DH, align 4
  %104 = load i32, i32* @d2i_DHparams, align 4
  %105 = load i32, i32* @i2d_DHparams, align 4
  %106 = load i32, i32* @DHparams_print, align 4
  %107 = call i32 @DO_TEST(i32 %103, i32 %104, i32 %105, i32 %106)
  %108 = load i32, i32* @DH, align 4
  %109 = load i32, i32* @d2i_DHxparams, align 4
  %110 = load i32, i32* @i2d_DHxparams, align 4
  %111 = load i32, i32* @DHparams_print, align 4
  %112 = call i32 @DO_TEST(i32 %108, i32 %109, i32 %110, i32 %111)
  %113 = load i32, i32* @DSA_SIG, align 4
  %114 = load i32, i32* @d2i_DSA_SIG, align 4
  %115 = load i32, i32* @i2d_DSA_SIG, align 4
  %116 = call i32 @DO_TEST_NO_PRINT(i32 %113, i32 %114, i32 %115)
  %117 = load i32, i32* @DSA, align 4
  %118 = load i32, i32* @d2i_DSAPrivateKey, align 4
  %119 = load i32, i32* @i2d_DSAPrivateKey, align 4
  %120 = load i32, i32* @DSA_print, align 4
  %121 = call i32 @DO_TEST_PRINT_OFFSET(i32 %117, i32 %118, i32 %119, i32 %120)
  %122 = load i32, i32* @DSA, align 4
  %123 = load i32, i32* @d2i_DSAPublicKey, align 4
  %124 = load i32, i32* @i2d_DSAPublicKey, align 4
  %125 = load i32, i32* @DSA_print, align 4
  %126 = call i32 @DO_TEST_PRINT_OFFSET(i32 %122, i32 %123, i32 %124, i32 %125)
  %127 = load i32, i32* @DSA, align 4
  %128 = load i32, i32* @d2i_DSAparams, align 4
  %129 = load i32, i32* @i2d_DSAparams, align 4
  %130 = load i32, i32* @DSAparams_print, align 4
  %131 = call i32 @DO_TEST(i32 %127, i32 %128, i32 %129, i32 %130)
  %132 = load i32, i32* @RSA, align 4
  %133 = load i32, i32* @d2i_RSAPublicKey, align 4
  %134 = load i32, i32* @i2d_RSAPublicKey, align 4
  %135 = load i32, i32* @RSA_print, align 4
  %136 = call i32 @DO_TEST_PRINT_OFFSET(i32 %132, i32 %133, i32 %134, i32 %135)
  %137 = load i32, i32* @EC_GROUP, align 4
  %138 = load i32, i32* @d2i_ECPKParameters, align 4
  %139 = load i32, i32* @i2d_ECPKParameters, align 4
  %140 = load i32, i32* @ECPKParameters_print, align 4
  %141 = call i32 @DO_TEST_PRINT_OFFSET(i32 %137, i32 %138, i32 %139, i32 %140)
  %142 = load i32, i32* @EC_KEY, align 4
  %143 = load i32, i32* @d2i_ECPrivateKey, align 4
  %144 = load i32, i32* @i2d_ECPrivateKey, align 4
  %145 = load i32, i32* @EC_KEY_print, align 4
  %146 = call i32 @DO_TEST_PRINT_OFFSET(i32 %142, i32 %143, i32 %144, i32 %145)
  %147 = load i32, i32* @EC_KEY, align 4
  %148 = load i32, i32* @d2i_ECParameters, align 4
  %149 = load i32, i32* @i2d_ECParameters, align 4
  %150 = load i32, i32* @ECParameters_print, align 4
  %151 = call i32 @DO_TEST(i32 %147, i32 %148, i32 %149, i32 %150)
  %152 = load i32, i32* @ECDSA_SIG, align 4
  %153 = load i32, i32* @d2i_ECDSA_SIG, align 4
  %154 = load i32, i32* @i2d_ECDSA_SIG, align 4
  %155 = call i32 @DO_TEST_NO_PRINT(i32 %152, i32 %153, i32 %154)
  %156 = load i32, i32* @EVP_PKEY, align 4
  %157 = load i32, i32* @d2i_AutoPrivateKey, align 4
  %158 = load i32, i32* @i2d_PrivateKey, align 4
  %159 = load i32, i32* @EVP_PKEY_print_private, align 4
  %160 = call i32 @DO_TEST_PRINT_PCTX(i32 %156, i32 %157, i32 %158, i32 %159)
  %161 = load i32, i32* @SSL_SESSION, align 4
  %162 = load i32, i32* @d2i_SSL_SESSION, align 4
  %163 = load i32, i32* @i2d_SSL_SESSION, align 4
  %164 = load i32, i32* @SSL_SESSION_print, align 4
  %165 = call i32 @DO_TEST(i32 %161, i32 %162, i32 %163, i32 %164)
  %166 = call i32 (...) @ERR_clear_error()
  ret i32 0
}

declare dso_local i32* @ASN1_ITEM_ptr(i32*) #1

declare dso_local i32* @ASN1_item_d2i(i32*, i32**, i64, i32*) #1

declare dso_local i32* @BIO_new(i32) #1

declare dso_local i32 @BIO_s_null(...) #1

declare dso_local i32 @ASN1_item_print(i32*, i32*, i32, i32*, i32) #1

declare dso_local i32 @BIO_free(i32*) #1

declare dso_local i32 @ASN1_item_i2d(i32*, i8**, i32*) #1

declare dso_local i32 @OPENSSL_free(i8*) #1

declare dso_local i32 @ASN1_item_free(i32*, i32*) #1

declare dso_local i32 @DO_TEST(i32, i32, i32, i32) #1

declare dso_local i32 @DO_TEST_NO_PRINT(i32, i32, i32) #1

declare dso_local i32 @DO_TEST_PRINT_OFFSET(i32, i32, i32, i32) #1

declare dso_local i32 @DO_TEST_PRINT_PCTX(i32, i32, i32, i32) #1

declare dso_local i32 @ERR_clear_error(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
